--- a/cc/index.html
+++ b/cc/index.html
@@ -168,7 +168,7 @@
                     </div>
                     <div class="flex items-start space-x-3">
                         <span class="bg-blue-100 text-blue-800 rounded-full w-6 h-6 flex items-center justify-center text-xs font-bold">3</span>
-                        <p class="text-sm">Wajib menjawab dalam <strong>bahasa Mandarin</strong></p>
+                        <p class="text-sm">Wajib menjawab dalam <strong>bahasa Mandarin (tidak menggunakan dialek Hokkien atau dialek daerah lainnya)</strong></p>
                     </div>
                     <div class="flex items-start space-x-3">
                         <span class="bg-blue-100 text-blue-800 rounded-full w-6 h-6 flex items-center justify-center text-xs font-bold">4</span>
