--- a/cc/index.html
+++ b/cc/index.html
@@ -225,7 +225,7 @@
                     </div>
                     <div class="bg-green-50 border-l-4 border-green-400 p-3 rounded">
                         <p class="text-sm font-semibold text-green-800">✅ BOLEH:</p>
-                        <p class="text-xs text-green-700">Menjaga ketertiban, bersikap sopan, tenang saat sesi soal</p>
+                        <p class="text-xs text-green-700">Menjaga ketertiban, bersikap sopan, tenang saat pembacaan soal dan saat peserta menjawab soal</p>
                     </div>
                     <div class="bg-yellow-50 border-l-4 border-yellow-400 p-3 rounded">
                         <p class="text-sm font-semibold text-yellow-800">❌ DILARANG:</p>
