--- a/cc/index.html
+++ b/cc/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Tabel Perbandingan Jenis Soal dan Peraturan Lomba</title>
+    <title>Tabel Perbandingan Jenis Soal dan Peraturan Lomba Cerdas Cermat Contafest 4</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <script>
         tailwind.config = {
@@ -23,7 +23,7 @@
         <!-- Header -->
         <div class="text-center mb-8">
             <h1 class="text-4xl font-bold text-chinese-red mb-4">
-                📋 Tabel Perbandingan Jenis Soal dan Peraturan Lomba
+                📋 Tabel Perbandingan Jenis Soal dan Peraturan Lomba Cerdas Cermat Contafest 4
             </h1>
             <div class="w-24 h-1 bg-chinese-gold mx-auto rounded-full"></div>
         </div>
@@ -206,7 +206,7 @@
                     </div>
                     <div class="flex items-start space-x-3">
                         <span class="bg-green-100 text-green-800 rounded-full w-6 h-6 flex items-center justify-center text-xs font-bold">5</span>
-                        <p class="text-sm">Hanya pengamat yang boleh komplain</p>
+                        <p class="text-sm">Hanya pengamat yang boleh mengajukan keberatan (komplain)</p>
                     </div>
                 </div>
             </div>
