--- a/cc/index.html
+++ b/cc/index.html
@@ -245,7 +245,7 @@
             <div class="grid md:grid-cols-3 gap-6">
                 <div class="bg-white/10 rounded-lg p-4">
                     <h4 class="font-semibold mb-2 text-chinese-gold">🔔 Sistem Bel</h4>
-                    <p class="text-sm">Grup: Langsung jawab<br>Rebutan: Tekan bel → tunggu instruksi → jawab</p>
+                    <p class="text-sm">Soal Grup: Langsung jawab<br>Soal Rebutan: Tekan bel → tunggu instruksi → jawab</p>
                 </div>
                 
                 <div class="bg-white/10 rounded-lg p-4">
@@ -255,7 +255,7 @@
                 
                 <div class="bg-white/10 rounded-lg p-4">
                     <h4 class="font-semibold mb-2 text-chinese-gold">👤 Hak Jawab</h4>
-                    <p class="text-sm">Grup: Juru Bicara only<br>Rebutan: Semua anggota</p>
+                    <p class="text-sm">Soal Grup: Hanya Juru Bicara<br>Soal Rebutan: Semua anggota</p>
                 </div>
             </div>
         </div>
