--- a/cc/index.html
+++ b/cc/index.html
@@ -250,7 +250,7 @@
                 
                 <div class="bg-white/10 rounded-lg p-4">
                     <h4 class="font-semibold mb-2 text-chinese-gold">⚖️ Konsekuensi</h4>
-                    <p class="text-sm">Langgar aturan: -100 hingga -200 poin<br>Curang: Diskualifikasi</p>
+                    <p class="text-sm">Langgar aturan: pengurangan poin<br>Curang: Diskualifikasi</p>
                 </div>
                 
                 <div class="bg-white/10 rounded-lg p-4">
