--- a/cc/index.html
+++ b/cc/index.html
@@ -262,7 +262,7 @@
 
         <!-- Footer -->
         <div class="text-center mt-8 text-gray-600">
-            <p class="text-sm">📋 Panduan Lengkap Perlombaan • Semua pihak wajib mematuhi peraturan yang berlaku</p>
+            <p class="text-sm">&copy;CONTAFEST 4 TEAM • PAKIN "SEGAR" CILODONG</p>
         </div>
     </div>
 
