--- a/cc/index.html
+++ b/cc/index.html
@@ -23,7 +23,7 @@
         <!-- Header -->
         <div class="text-center mb-8">
             <h1 class="text-4xl font-bold text-chinese-red mb-4">
-                📋 Tabel Perbandingan Jenis Soal dan Peraturan Lomba Cerdas Cermat Contafest 4
+                📋 Tabel Perbandingan Jenis Soal dan Peraturan Lomba Cerdas Cermat <br/>CONTAFEST 4
             </h1>
             <div class="w-24 h-1 bg-chinese-gold mx-auto rounded-full"></div>
         </div>
