--- a/cc/index.html
+++ b/cc/index.html
@@ -103,10 +103,10 @@
                         <tr class="hover:bg-yellow-50 transition-colors">
                             <td class="border border-gray-300 px-4 py-3 font-semibold bg-gray-50">Nilai Poin per Soal</td>
                             <td class="border border-gray-300 px-4 py-3 text-center">
-                                <span class="bg-blue-100 text-blue-800 px-3 py-1 rounded-full font-medium">Tetap 100 poin</span>
+                                <span class="bg-blue-100 text-blue-800 px-3 py-1 rounded-full font-medium">Maksimal 100 poin</span>
                             </td>
                             <td class="border border-gray-300 px-4 py-3 text-center">
-                                <span class="bg-blue-100 text-blue-800 px-3 py-1 rounded-full font-medium">Tetap 100 poin</span>
+                                <span class="bg-blue-100 text-blue-800 px-3 py-1 rounded-full font-medium">Maksimal 100 poin</span>
                             </td>
                             <td class="border border-gray-300 px-4 py-3 text-center">
                                 <span class="bg-chinese-gold text-gray-800 px-3 py-1 rounded-full font-medium">Meningkat (100, 200, 300, dst.)</span>
