--- a/cc/index.html
+++ b/cc/index.html
@@ -121,11 +121,11 @@
                             </td>
                             <td class="border border-gray-300 px-4 py-3 text-center">
                                 <span class="bg-orange-100 text-orange-800 px-3 py-1 rounded-full font-medium">⏱️ 5 detik</span><br>
-                                <small class="text-gray-500">setelah menekan bel</small>
+                                <small class="text-gray-500">setelah menekan bel dan dipersilakano oleh juri</small>
                             </td>
                             <td class="border border-gray-300 px-4 py-3 text-center">
                                 <span class="bg-orange-100 text-orange-800 px-3 py-1 rounded-full font-medium">⏱️ 5 detik</span><br>
-                                <small class="text-gray-500">setelah menekan bel</small>
+                                <small class="text-gray-500">setelah menekan bel dan dipersilakano oleh juri</small>
                             </td>
                         </tr>
                         
