--- a/cc/index.html
+++ b/cc/index.html
@@ -62,9 +62,9 @@
 <body class="bg-gradient-to-br from-red-50 to-yellow-50 min-h-screen py-8">
     <div class="container mx-auto px-4 max-w-7xl">
         <div class="text-center mb-8">
-            <h1 class="text-3xl md:text-4xl font-bold text-chinese-red mb-4">
-                📋 Tabel Perbandingan Jenis Soal<br/>dan<br/>Peraturan Lomba Cerdas Cermat<br/>CONTAFEST 4
-            </h1>
+            <h2 class="text-3xl md:text-4xl font-bold text-chinese-red mb-4">
+                Infografik Sistematika Lomba Cerdas Cermat<br/>CONTAFEST 4
+            </h2>
             <div class="w-24 h-1 bg-chinese-gold mx-auto rounded-full"></div>
         </div>
 
@@ -273,7 +273,7 @@
         <div class="bg-gradient-to-r from-chinese-red to-red-600 rounded-xl shadow-lg p-4 md:p-6 text-white">
             <h2 class="text-2xl font-bold mb-6 flex items-center">
                 <span class="bg-white text-chinese-red rounded-full w-8 h-8 flex items-center justify-center text-lg font-bold mr-3">⚡</span>
-                RINGKasan POIN PENTING
+                RINGKASAN POIN PENTING
             </h2>
             
             <div class="grid md:grid-cols-3 gap-6">
